fixed padding on about page, and spacing in some other locations as well

--- a/static/style.css
+++ b/static/style.css
@@ -49,9 +49,10 @@ h2 { font-size: 1.8rem; }
 h3 { font-size: 1.3rem; }
 
 main, 
-body > h2, body > h1, body > ul, body > div:not(.progress), body > a:not(.nav-link), body > img {
-    margin-left: auto;
-    margin-right: auto;
+/* body > h2, body > h1, body > ul, body > div:not(.progress), body > a:not(.nav-link), body > img { */
+body {
+    margin-left: var(--spacing-lg);
+    margin-right: var(--spacing-lg);
     padding: 0 var(--spacing-sm);
 }
 
@@ -119,12 +120,10 @@ header hr {
 
 .about-wrapper {
     background-color: var(--color-card-bg);
-    padding: var(--spacing-lg);
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-    margin-bottom: var(--spacing-lg);
-    margin-top: var(--spacing-md);
-    padding: var(--spacing-sm) var(--spacing-sm);
+    margin: 2rem, 5rem;
+    padding: var(--spacing-md) var(--spacing-sm);
 }
 
 .about-wrapper ul li {
